generating random playable midi

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -462,16 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-27T21:56:35.024608Z",
-     "start_time": "2020-02-27T21:56:34.997522Z"
+     "end_time": "2020-02-27T23:32:30.982703Z",
+     "start_time": "2020-02-27T23:32:30.943727Z"
     }
    },
    "outputs": [],
    "source": [
     "from IPython.display import display, Audio\n",
+    "import soundfile as sf\n",
+    "\n",
     "\n",
     "def midi2wav(sample):\n",
     "    \"\"\"Generate an in-memory wav file from a PrettyMidi object\n",
@@ -487,7 +489,11 @@
     "def listen_to(sample):\n",
     "    \"\"\"Create a audio player that renders a PrettyMidi object\"\"\"\n",
     "    data, rate = midi2wav(sample)\n",
-    "    display(Audio(data=data, rate=rate))"
+    "    display(Audio(data=data, rate=rate))\n",
+    "    \n",
+    "def save_as_wav(sample, filename):\n",
+    "    data, rate = midi2wav(sample)\n",
+    "    sf.write(filename, data, rate)"
    ]
   },
   {
@@ -879,6 +885,80 @@
    "outputs": [],
    "source": [
     "listen_to(samples[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-27T22:57:47.170419Z",
+     "start_time": "2020-02-27T22:57:47.145036Z"
+    }
+   },
+   "source": [
+    "## Generating a random midi track"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-27T23:28:32.395610Z",
+     "start_time": "2020-02-27T23:28:24.206351Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "rand = np.zeros([8000,8])\n",
+    "rand[:,0] = np.random.uniform(0, 300, size=8000) # start\n",
+    "rand[:,1] = np.random.uniform(0,1,size=8000) < seq[:,1].mean() # is_note\n",
+    "# split notes and control change events\n",
+    "rand_notes = rand[rand[:,1]==1] # select rows there is_note is true\n",
+    "rand_cc = rand[rand[:,1]==0] # select rows there is_note is false\n",
+    "seq_notes = seq[seq[:,1]==1] # select rows there is_note is true\n",
+    "seq_cc = seq[seq[:,1]==0] # select rows there is_note is false\n",
+    "# notes: pitch, velocity, duration/end\n",
+    "rand_notes[:,2:5] = np.random.multivariate_normal(seq_notes[:,2:5].mean(axis=0), np.diag(seq_notes[:,2:5].std(axis=0)), size=len(rand_notes))\n",
+    "rand_notes[:,4] = np.max(rand_notes[:,4], 0)\n",
+    "# events: value, one hot encodings for number\n",
+    "# it doesn't really make sense to use normal distributed values for one hot\n",
+    "# encoding - it should be a distribution where p(rand_one_hot.argmax()) is distributed\n",
+    "# like p(rand_one_hot.argmax()), but it doesn't really matter\n",
+    "rand_cc[:,5:] = np.random.multivariate_normal(seq_cc[:,5:].mean(axis=0), np.diag(seq_cc[:,5:].std(axis=0)), size=len(rand_cc))\n",
+    "# copy back\n",
+    "rand[rand[:,1]==1] = rand_notes\n",
+    "rand[rand[:,1]==0] = rand_cc\n",
+    "# columns 2-5 are 7bit ints\n",
+    "rand[:,2:6] = np.clip(rand[:,2:6], 0, 127).astype(int)\n",
+    "# Done!\n",
+    "rand_midi = mapper.vec2midi(rand)\n",
+    "listen_to(rand_midi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-27T23:33:19.160788Z",
+     "start_time": "2020-02-27T23:33:14.695723Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exploration.ipynb       maestro-v2.0.0-midi.zip random_sounds.wav\r\n",
+      "\u001b[1m\u001b[36mmaestro-v2.0.0\u001b[m\u001b[m          maestro-v2.0.0.zip      requirements.txt\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_as_wav(rand_midi, 'random_sounds.wav')\n",
+    "!ls"
    ]
   }
  ],
