new random sound generator built on top of new postprocessor that makes an untrained generator-lstm generate sound

--- a/environment.ipynb
+++ b/environment.ipynb
@@ -10,12 +10,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T12:35:33.158718Z",
-     "start_time": "2020-03-11T12:35:33.090468Z"
+     "end_time": "2020-03-11T21:51:34.969516Z",
+     "start_time": "2020-03-11T21:51:34.900935Z"
     }
    },
    "outputs": [],
@@ -35,9 +42,9 @@
     "\n",
     "import gym\n",
     "\n",
-    "from musicrl.midi2vec import MidiVectorMapper\n",
+    "from musicrl.midi2vec import MidiVectorMapper, PostProcessor\n",
     "from musicrl.render import *\n",
-    "from musicrl.random_generator import generate_random_midi, resemble_midi\n",
+    "from musicrl.random_generator import resemble_midi, repair_generated_seq\n",
     "from musicrl.data import RandomMidiDataGenerator\n",
     "from musicrl import mel_lstm\n",
     "\n",
@@ -56,8 +63,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T10:29:11.568313Z",
-     "start_time": "2020-03-11T10:28:40.382528Z"
+     "end_time": "2020-03-11T21:52:09.443907Z",
+     "start_time": "2020-03-11T21:51:39.483788Z"
     }
    },
    "outputs": [],
@@ -72,8 +79,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T10:29:11.741856Z",
-     "start_time": "2020-03-11T10:29:11.570490Z"
+     "end_time": "2020-03-11T21:52:09.537375Z",
+     "start_time": "2020-03-11T21:52:09.446036Z"
     }
    },
    "outputs": [],
@@ -88,26 +95,10 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T10:29:11.832221Z",
-     "start_time": "2020-03-11T10:29:11.744363Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "notes = []\n",
-    "for event in real_seq:\n",
-    "    if isinstance(mapper.action2note(event), pretty_midi.Note):\n",
-    "        notes.append(event)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-11T10:29:48.495826Z",
-     "start_time": "2020-03-11T10:29:48.442543Z"
-    }
+     "end_time": "2020-03-11T21:52:09.592023Z",
+     "start_time": "2020-03-11T21:52:09.539474Z"
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -115,12 +106,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T13:08:12.917206Z",
-     "start_time": "2020-03-11T13:08:12.847521Z"
+     "end_time": "2020-03-11T21:52:09.675168Z",
+     "start_time": "2020-03-11T21:52:09.595179Z"
     }
    },
    "outputs": [],
@@ -130,7 +128,7 @@
     "\n",
     "\n",
     "class MelEnvironment(gym.Env):\n",
-    "    \"\"\"Environment to grain generating midi data in a self defined\n",
+    "    \"\"\"Environment to train generating midi data in a self defined\n",
     "    vector space. The midi vector representation is defined via the\n",
     "    mapper object.\n",
     "    The waveform for the single instrument is then preprocessed for the\n",
@@ -140,6 +138,8 @@
     "    observation. The number of time frames that are used for the observation\n",
     "    are defined by the constant `self.N_TIMESTEPS`.\n",
     "    One session is understood as one song.\n",
+    "    \n",
+    "    Always works on batches - i.e. multiple songs/trajectories in parallel\n",
     "    \n",
     "    Gets:\n",
     "        discriminator: keras.Model: np.array(preprocessed) -> np.array(#time_steps, 1)\n",
@@ -171,8 +171,16 @@
     "        self.current_observation = np.zeros((self.N_TIMESTEPS, 128))\n",
     "     \n",
     "    def _update_wav(self, action):\n",
+    "        \"\"\"Appends the action to the current_seq and synthesizes the sound\n",
+    "        if an actual note was played\n",
+    "        \n",
+    "        Gets:\n",
+    "            action: np.array of shape (mapper.dims)\n",
+    "        Returns:\n",
+    "            updated: Boolean, True iff a note was played\n",
+    "        \"\"\"\n",
     "        self.current_seq.append(action)\n",
-    "        event = mapper.action2note(action)\n",
+    "        event = mapper.action2note(action, start=len(self.current_seq)*mapper.time_per_tick)\n",
     "        if isinstance(event, pretty_midi.Note):\n",
     "            if len(self.current_midi.instruments[0].notes) == 1:\n",
     "                # It is the first note, so we synthesize\n",
@@ -181,10 +189,12 @@
     "            else:\n",
     "                self.current_midi.instruments[0].append_and_synthesize(event)\n",
     "            return True\n",
-    "        \n",
+    "        else:\n",
+    "            return False\n",
     "        \n",
     "    def step(self, action):\n",
-    "        self._update_wav(action)\n",
+    "        if not self._update_wav(action):\n",
+    "            return self.current_observation, 0, action[4]>0.5, None\n",
     "        preprocessed = self.preprocess_wav(self.current_wav, self.fr)[na]\n",
     "        prediction = self.discriminator.predict_on_batch(preprocessed)\n",
     "        observation = np.zeros((self.N_TIMESTEPS, 128))\n",
@@ -218,12 +228,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's use the environment by pretending to take actions of a real midi sequence, just to check that everything works as expected"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T13:09:34.390575Z",
-     "start_time": "2020-03-11T13:08:13.422851Z"
+     "end_time": "2020-03-11T22:02:31.717307Z",
+     "start_time": "2020-03-11T21:58:35.545209Z"
     },
     "scrolled": true
    },
@@ -233,12 +250,14 @@
     "\n",
     "env = MelEnvironment(discriminator, mel_lstm.preprocess_wav, mapper, 1000)\n",
     "\n",
-    "for i, action in enumerate(notes):\n",
-    "    env.step(action)\n",
-    "    if i % 500 == 0:\n",
+    "observations = []\n",
+    "for i, action in enumerate(real_seq):\n",
+    "    observation, _, _, _ = env.step(action)\n",
+    "    observations.append(observation)\n",
+    "    if i+1 % 10000 == 0:\n",
     "        env.render()\n",
     "        plt.show()\n",
-    "    if i > 500: break\n",
+    "        break\n",
     "        \n",
     "    \n",
     "# display(Audio(env.current_wav, rate=44100))"
@@ -249,14 +268,160 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T13:36:26.881575Z",
-     "start_time": "2020-03-11T13:36:26.632310Z"
+     "end_time": "2020-03-11T22:02:38.670064Z",
+     "start_time": "2020-03-11T22:02:38.312671Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "env.render()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T20:21:49.363472Z",
+     "start_time": "2020-03-11T20:21:48.221802Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "Audio(env.current_wav, rate=44100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T20:50:17.361799Z",
+     "start_time": "2020-03-11T20:50:14.981230Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "again = mapper.vec2midi(env.current_seq)\n",
+    "listen_to(again)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T20:52:33.111298Z",
+     "start_time": "2020-03-11T20:52:30.653824Z"
     }
+   },
+   "outputs": [],
+   "source": [
+    "listen_to(real_midis[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T20:55:43.285501Z",
+     "start_time": "2020-03-11T20:55:42.942902Z"
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "plt.plot(env.rewards)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T23:27:50.328498Z",
+     "start_time": "2020-03-11T23:27:49.167371Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "real_seq = mapper.midi2vec(real_midis[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generator\n",
+    "\n",
+    "In order to implement the actor, we need a generator that takes observations and outputs a state. Before we build stuff for the reinforcement learning training loop, we will try to find an architecture that takes realistic inputs and generates something playable.\n",
+    "\n",
+    "I have implemented the `midi2vec.postprocess` such that it transforms the output of an untrained LSTM into something that is not just silence - otherwise, the actor will never play a keyboard, never get any reward and never learn anything. A drama that we need to avoid!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T23:40:47.876988Z",
+     "start_time": "2020-03-11T23:39:28.257236Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(LSTM(128,\n",
+    "        return_sequences=False,\n",
+    "        batch_input_shape=(10000, 1, 128000),\n",
+    "        stateful=True))\n",
+    "model.add(Dense(128, activation='sigmoid'))\n",
+    "model.add(Dense(mapper.dims, activation='relu'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
+    "\n",
+    "postprocess = PostProcessor([mapper.midi2vec(real_midi) for real_midi in real_midis[:5]])\n",
+    "\n",
+    "observations = np.array(observations[:10000])\n",
+    "states = observations.reshape(10000, 1, -1)\n",
+    "gen_seq = model.predict(states)\n",
+    "gen_seq = postprocess(gen_seq)\n",
+    "gen_midi = mapper.vec2midi(gen_seq)\n",
+    "listen_to(gen_midi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random generator on new `MidiVectorMapper`\n",
+    "\n",
+    "This is a small leftover from developing the postprocessor - and a demonstration that it is now not so hard anymore to generate something. Gaussian noise almost does the trick."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-11T23:40:59.642282Z",
+     "start_time": "2020-03-11T23:40:47.889692Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "noise = np.random.normal(0.2, 1, size=(15000, 5))\n",
+    "noise[:,4] = 0\n",
+    "rand_seq = postprocess(noise)\n",
+    "rand_midi = mapper.vec2midi(rand_seq)\n",
+    "listen_to(rand_midi)"
    ]
   }
  ],
