--- a/environment.ipynb
+++ b/environment.ipynb
@@ -367,6 +367,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_generator(batch_input_shape):\n",
+    "    model = Sequential()\n",
+    "\n",
+    "    model.add(LSTM(128,\n",
+    "            return_sequences=False,\n",
+    "            batch_input_shape=batch_input_shape,\n",
+    "            stateful=True))\n",
+    "    model.add(Dense(128, activation='sigmoid'))\n",
+    "    model.add(Dense(mapper.dims, activation='relu'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-03-11T23:40:47.876988Z",
@@ -376,16 +395,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "model = Sequential()\n",
-    "\n",
-    "model.add(LSTM(128,\n",
-    "        return_sequences=False,\n",
-    "        batch_input_shape=(10000, 1, 128000),\n",
-    "        stateful=True))\n",
-    "model.add(Dense(128, activation='sigmoid'))\n",
-    "model.add(Dense(mapper.dims, activation='relu'))\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
+    "model = get_generator(batch_input_shape=(10000, 1, 128000))\n",
     "\n",
     "postprocess = PostProcessor([mapper.midi2vec(real_midi) for real_midi in real_midis[:5]])\n",
     "\n",
@@ -401,7 +411,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random generator on new `MidiVectorMapper`\n",
+    "## Using the generator in the environment, without training loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observation = env.reset()\n",
+    "for i in range(15000):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modifying the environment for off policy batch training\n",
+    "\n",
+    "Generating a single trajectory takes a lot of time, even without training. This is due to the fact that we generate step by step, and after every step we generate the spectrogram from scatch.\n",
+    "\n",
+    "While the environment itself is optimizable - i.e. by only computing the spectrograms for frames in which new sound has been added, the most obvious speed up can be achieved by batch training.\n",
+    "\n",
+    "Batch training means, we let the same agent generate `batch_size` songs/trajectories in parallel. The discriminator also predicts for so many songs in parallel."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random generator on new `MidiVectorMapper`\n",
     "\n",
     "This is a small leftover from developing the postprocessor - and a demonstration that it is now not so hard anymore to generate something. Gaussian noise almost does the trick."
    ]
